add entries endpoints
